[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]==1.3.16", "setuptools"]


[project.urls]
repository = "https://github.com/FAIRmat-NFDI/nomad-distro-template"

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git@v0.1.1",
  "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git",
  "test_nomad @ git+https://github.com/paolog8/test_nomad.git"
]
jupyter = [
  'voila',
  'ipyaggrid',
  'ipyvuetify',
  'ipysheet',
  'ipydatagrid',
  'jupyter-flex',
  'ipympl',
  #'baybe',
  'pyvis',
  'lmfit',
  'jupyterlab_h5web',
  'jupyterlab>4.0',
  'seaborn',
]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.3.16"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
